--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "chess.js": "^0.12.0",
     "chessground": "^8.1.7",
     "moralis": "^0.0.155",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-blockies": "^1.4.1",
     "react-dom": "^17.0.2",
